[package]
name = "fireblocks-cosigner-callback-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.2.7", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "my-telemetry",
] }
my-http-server-controllers = { tag = "0.2.7", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-http-server-swagger = { tag = "0.2.7", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }

http-is-alive-shared = { tag = "0.1.1", git = "https://github.com/MyJetTools/http-is-alive-shared.git" }
is-alive-middleware = { tag = "0.1.3", git = "https://github.com/ReachPay/is-alive-middleware.git" }


my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }

my-seq-logger = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-seq-logger.git" }

rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }

my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }
flurl = { tag = "0.2.3", git = "https://github.com/MyJetTools/fl-url.git" }
fireblocks_sdk = { git = "https://github.com/MyJetTools/fireblocks_sdk.git", tag = "0.8.5" }

tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
prost = "*"
prost-types = "*"
serde = "*"
serde_yaml = "*"
serde_json = "*"


[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
